RESULTS/AutoSpec/raw_results/out-4o-oopsla/024_0007/024_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/024_0007/024_merged.c:26:7: error: unterminated comment
   26 |       /*@;
      |       ^
